--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 
   <body>
  <header class="header" >
+  
       <nav class="nav">   
-        <h1>
-          <a href="" class="left-style" >Nabla</a> 
-        </h1>    
+         <div>
+            <a href="#" class="left-style" >Nabla</a> 
+         </div>
        
       <ul class="ul-between">
-        <li>  <a href="" class="between-style"  >Home</a>    </li>
-        <li>  <a href="" class="between-style">Vision</a>  </li>
-        <li>  <a href="" class="between-style">Team</a>    </li>
-        <li>  <a href="" class="between-style">Careers</a> </li>
-        <li>  <a href="" class="between-style"  >Blog</a>    </li>
+        <li>  <a href="#" class="between-style"  >Home</a>    </li>
+        <li>  <a href="#" class="between-style">Vision</a>  </li>
+        <li>  <a href="#" class="between-style">Team</a>    </li>
+        <li>  <a href="#" class="between-style">Careers</a> </li>
+        <li>  <a href="#" class="between-style"  >Blog</a>    </li>
       </ul>
 
       <div>
-         <a href="" class="right-style ">Get early access</a>  
+         <a href="#" class="right-style ">Get early access</a>  
       </div>
       
     </nav>
